--- a/2025DE245Prac1_ExtractLoad.ipynb
+++ b/2025DE245Prac1_ExtractLoad.ipynb
@@ -17,16 +17,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Introduction to Python for Data Engineering\n",
-        "\n",
-        "This notebook demonstrates how to read data from a public API, process it to create useful information, and store the result in an SQLite database.\n",
-        "\n",
-        "It assumes you have read [this article](https://www.startdataengineering.com/post/python-for-de/#extract--load-read-and-write-data-to-any-system).\n",
-        "\n",
-        "**Acknowledgment**: Parts of this notebook were developed with the assistance of ChatGPT, an AI language model by OpenAI, to support instructional design and coding tasks related to data engineering concepts."
+        "# **Practical 2**"
       ],
       "metadata": {
-        "id": "Fok6QWp9znpg"
+        "id": "u9L9nV8lvCxO"
       }
     },
     {
@@ -37,7 +31,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vpIOn2KKzVhs",
-        "outputId": "abaa8d94-492a-4ac5-e789-f93b96716d75"
+        "outputId": "cd0bc370-dc91-4478-ab8c-c43bbfd89632"
       },
       "outputs": [
         {
@@ -45,10 +39,10 @@
           "name": "stdout",
           "text": [
             "Requirement already satisfied: requests in /usr/local/lib/python3.11/dist-packages (2.32.3)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests) (3.4.2)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests) (3.4.3)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests) (3.10)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests) (2.5.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests) (2025.7.14)\n"
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests) (2025.8.3)\n"
           ]
         }
       ],
@@ -75,7 +69,8 @@
       "cell_type": "code",
       "source": [
         "# Read data from CoinGecko API\n",
-        "url = \"https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd\"\n",
+        "target = \"zar\"\n",
+        "url = \"https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd,\" + target\n",
         "response = requests.get(url)\n",
         "data = response.json()\n",
         "\n",
@@ -86,7 +81,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lu4NR0Rf0LKn",
-        "outputId": "5128cc18-9435-4c57-c28d-0e0656bc00f2"
+        "outputId": "f167e96b-e72c-4e65-f682-bbb50cccd16e"
       },
       "execution_count": 10,
       "outputs": [
@@ -94,7 +89,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'bitcoin': {'usd': 118306}}"
+              "{'bitcoin': {'usd': 114304, 'zar': 2018611}}"
             ]
           },
           "metadata": {},
@@ -103,54 +98,31 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "We will extract the Bitcoin price in USD and convert it to ZAR using an estimated exchange rate.\n",
-        "This is an example of turning raw data into useful **information**."
-      ],
-      "metadata": {
-        "id": "6-vfkALo0P9Q"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Function to convert USD to ZAR\n",
-        "def convert_usd_to_zar(usd_amount, rate=18.5):\n",
-        "    return round(usd_amount * rate, 2)"
-      ],
-      "metadata": {
-        "id": "60EpkZEO0V0d"
-      },
-      "execution_count": 11,
-      "outputs": []
-    },
-    {
       "cell_type": "code",
       "source": [
         "# Extract USD price and apply transformation\n",
         "usd_price = data[\"bitcoin\"][\"usd\"]\n",
-        "zar_price = convert_usd_to_zar(usd_price)\n",
+        "target_price = data[\"bitcoin\"][target]\n",
         "timestamp = datetime.now().isoformat()\n",
         "\n",
         "print(f\"Bitcoin price in USD: {usd_price}\")\n",
-        "print(f\"Estimated price in ZAR: {zar_price}\")\n"
+        "print(f\"Estimated price in Target currency: {target_price}\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ecC-Yy-E0a_t",
-        "outputId": "2c37ef84-57fc-43d9-dab7-8cd989a7d943"
+        "outputId": "e9eb680b-da83-46cc-b884-5ee78adca986"
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Bitcoin price in USD: 118306\n",
-            "Estimated price in ZAR: 2188661.0\n"
+            "Bitcoin price in USD: 114304\n",
+            "Estimated price in Target currency: 2018611\n"
           ]
         }
       ]
@@ -172,19 +144,19 @@
         "    -- id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
         "    timestamp TEXT,\n",
         "    usd REAL,\n",
-        "    zar REAL\n",
+        "    target REAL\n",
         ")\n",
         "''')\n",
         "\n",
         "# Insert the new row\n",
-        "cursor.execute(\"INSERT INTO prices VALUES (?, ?, ?)\", (timestamp, usd_price, zar_price))\n",
+        "cursor.execute(\"INSERT INTO prices VALUES (?, ?, ?)\", (timestamp, usd_price, target_price))\n",
         "conn.commit()\n",
         "conn.close()\n"
       ],
       "metadata": {
         "id": "wpimWgg00lgl"
       },
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -206,16 +178,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "URSO8F6x0q1q",
-        "outputId": "b9be3434-bc0d-4646-93d5-70729de945c0"
+        "outputId": "ba7f2d76-2de3-4618-e111-a67325d02eed"
       },
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "('2025-07-30T07:34:20.348960', 118306.0, 2188661.0)\n",
-            "('2025-07-30T06:37:14.703790', 118174.0, 2186219.0)\n"
+            "('2025-08-19T14:31:38.013872', 114304.0, 2018611.0)\n"
           ]
         }
       ]
